Broken links fix

--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
                             <a href="mailto:nlesko94@gmail.com" class="text-coal">
                                 <i data-aos="flip-left" class="fas fa-envelope-square fa-3x"></i>
                             </a>
-                            <a href="www.linkedin.com/in/nikola-lesko" class="text-coal" target="_blank">
+                            <a href="https://www.linkedin.com/in/nikola-lesko" class="text-coal" target="_blank">
                                 <i data-aos="flip-up" class="fab fa-linkedin fa-3x"></i>
                             </a>
                             <a href="https://github.com/nlesko" class="text-coal" target="_blank">
@@ -342,7 +342,7 @@
                 </a>
             </li>
             <li>
-                <a class="btn-floating steelblue text-bone" href="www.linkedin.com/in/nikola-lesko" target="_blank">
+                <a class="btn-floating steelblue text-bone" href="https://www.linkedin.com/in/nikola-lesko" target="_blank">
                     <i class="fab fa-linkedin fa-3x"></i>
                 </a>
             </li>
