--- a/index.html
+++ b/index.html
@@ -121,8 +121,10 @@
                         <img src="./assets/images/profile_350px.jpg" alt="Picture of Nikola." id="profile-img" class="responsive-img">
                     </div>
                     <div class="col s12 m12 l8" data-aos="fade-left">
-                        <p class="flow-text">I am a Full-stack JavaScript Web Developer. I offer a complete Web Application
-                            solution, includes development and design. Creating beautiful and dynamic custom-built Applications
+                        <p class="flow-text">I am a Full-stack JavaScript Web Developer. I offer a complete Web
+                            Application
+                            solution, includes development and design. Creating beautiful and dynamic custom-built
+                            Applications
                             for clients ranging from individuals to small-businesses.</p>
                         <div class="row">
                             <div class="col s12">
@@ -222,8 +224,10 @@
                                 <span class="card-title text-coal">Todo API
                                     <i class="material-icons right">close</i>
                                 </span>
-                                <p class="text-coal">Todo API is task management application built with NodeJS framework
-                                    Express and MongoDB as Database. Front is made using EJS templating engine and jQuery
+                                <p class="text-coal">Todo API is task management application built with NodeJS
+                                    framework
+                                    Express and MongoDB as Database. Front is made using EJS templating engine and
+                                    jQuery
                                 </p>
                             </div>
                         </div>
@@ -253,7 +257,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col s12 m4" data-aos="flip-right">
+                    <div class="col s12 m4" data-aos="flip-left">
                         <div class="card bone">
                             <div class="card-image waves-effect waves-block waves-light">
                                 <img class="activator" src="./assets/images/projects/Guess-the-color-game.jpg">
@@ -270,7 +274,8 @@
                                             </a>
                                         </div>
                                         <div class="col s12 m6">
-                                            <a href="https://github.com/nlesko/Guess_the_Color_Portfolio" class="btn steelblue" target=="_blank">View
+                                            <a href="https://github.com/nlesko/Guess_the_Color_Portfolio" class="btn steelblue"
+                                                target=="_blank">View
                                                 Github
                                             </a>
                                         </div>
@@ -280,11 +285,56 @@
                                 </p>
                             </div>
                             <div class="card-reveal bone">
-                                <span class="card-title text-coal">Mountain Climber
+                                <span class="card-title text-coal">Guess the Color Game
                                     <i class="material-icons right">close</i>
                                 </span>
-                                <p class="text-coal">Simple Guess the Color Game made with JavaScript. The Game asks you
+                                <p class="text-coal">Simple Guess the Color Game made with JavaScript. The Game asks
+                                    you
                                     to guess colour of RGB value shown in header.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col s12 m4" data-aos="flip-up">
+                        <div class="card bone">
+                            <div class="card-image waves-effect waves-block waves-light">
+                                <img class="activator" src="./assets/images/projects/countdown-clock.jpg">
+                            </div>
+                            <div class="card-content">
+                                <span class="card-title activator text-coal">Guess the Color Game
+                                    <i class="material-icons right">more_vert</i>
+                                </span>
+                                <p>
+                                    <div class="row">
+                                        <div class="col s12 m6">
+                                            <a href="https://nlesko.github.io/projects/christmas-countdown-clock/"
+                                                target="_blank" class="btn steelblue">View
+                                                Demo
+                                            </a>
+                                        </div>
+                                        <div class="col s12 m6">
+                                            <a href="https://github.com/nlesko/christmas-countdown-clock" class="btn steelblue"
+                                                target=="_blank">View
+                                                Github
+                                            </a>
+                                        </div>
+                                    </div>
+
+
+                                </p>
+                            </div>
+                            <div class="card-reveal bone">
+                                <span class="card-title text-coal">Christmas Countdown Clock
+                                    <i class="material-icons right">close</i>
+                                </span>
+                                <p class="text-coal">In the mood for holidays decided to put together this simple
+                                    Christmas
+                                    countdown clock
+                                    It contains countdown timer that is counting how much time is left till
+                                    <strong>December 25, 2018, 00:00:01</strong> in the night. (will be updated for
+                                    2019).
+                                    Besides timer added simple snow-like background using canvas.
+                                    Also what kind of Christmas it would be without some Christmas lights? :)
                                 </p>
                             </div>
                         </div>
