Add Cryptocurrency Tracker Project

--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
                                 <img class="activator" src="./assets/images/projects/countdown-clock.jpg">
                             </div>
                             <div class="card-content">
-                                <span class="card-title activator text-coal">Guess the Color Game
+                                <span class="card-title activator text-coal">Christmas Clock
                                     <i class="material-icons right">more_vert</i>
                                 </span>
                                 <p>
@@ -335,6 +335,46 @@
                                     2019).
                                     Besides timer added simple snow-like background using canvas.
                                     Also what kind of Christmas it would be without some Christmas lights? :)
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col s12 m4" data-aos="flip-right">
+                        <div class="card bone">
+                            <div class="card-image waves-effect waves-block waves-light">
+                                <img class="activator" src="./assets/images/projects/cryptocurrency-tracker.jpg">
+                            </div>
+                            <div class="card-content">
+                                <span class="card-title activator text-coal">Cryptocurrency Tracker
+                                    <i class="material-icons right">more_vert</i>
+                                </span>
+                                <p>
+                                    <div class="row">
+                                        <div class="col s12 m6">
+                                            <a href="https://nlesko.github.io/projects/cryptocurrency-tracker/" target="_blank"
+                                                class="btn steelblue">View
+                                                Demo
+                                            </a>
+                                        </div>
+                                        <div class="col s12 m6">
+                                            <a href="https://github.com/nlesko/cryptocurrency-vanilla-js-tracker" class="btn steelblue"
+                                                target=="_blank">View
+                                                Github
+                                            </a>
+                                        </div>
+                                    </div>
+
+
+                                </p>
+                            </div>
+                            <div class="card-reveal bone">
+                                <span class="card-title text-coal">Cryptocurrency Tracker
+                                    <i class="material-icons right">close</i>
+                                </span>
+                                <p class="text-coal">
+                                    Cryptocurrency Tracker built with vanilla JS using <a href="https://docs.coinranking.com/">Coinranking
+                                        API</a>. Web application will list 50 Cryptocurrencies and show their Icon,
+                                    name, current worth US dollars and change in last 24h
                                 </p>
                             </div>
                         </div>
