--- a/src/index.html
+++ b/src/index.html
@@ -163,14 +163,14 @@
                 <div class="row projects--personal">
 
                 </div>
-                <!-- <div class="row">
+                <div class="row" style="margin-top: 30px;">
                     <div class="col-12" data-aos="fade-down">
                         <h3 class="subtitle">Professional Projects</h3>
                     </div>
                 </div>
                 <div class="row projects--professional">
 
-                </div> -->
+                </div>
             </div>
         </section>
         <!-- ==== PROJECT SECTION END ==== -->
