--- a/projects/cryptocurrency-tracker/index.html
+++ b/projects/cryptocurrency-tracker/index.html
@@ -18,8 +18,8 @@
             <div class="logo-branding"><span>Crypto</span>currency Tracker
             </div>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="https://github.com/nlesko/cryptocurrency-vanilla-js-tracker">About</a></li>
+                <li><a href="/">Home</a></li>
+                <li><a href="https://github.com/nlesko/cryptocurrency-vanilla-js-tracker" target="_blank">About</a></li>
             </ul>
         </nav>
     </header>
